--- a/professor.html
+++ b/professor.html
@@ -100,6 +100,280 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
 </div>
 <!-- //header -->
+<!-- about-heading -->
+<div class="about-heading">
+    <h2>专家<span>门户</span></h2>
+</div>
+<!-- //about-heading -->
+<!-- about -->
+<div class="about">
+    <!-- about-top -->
+    <div class="agileits-about-top">
+        <div class="container">
+            <div class="w3-banner-bottom-heading">
+                <h3>基本<span>信息</span></h3>
+            </div>
+            <div class="agileinfo-top-grids">
+                <div class="col-sm-4 wthree-top-grid">
+                    <h4>姓名</h4>
+                    <p>xxxxx</p>
+                </div>
+                <div class="col-sm-4 wthree-top-grid">
+                    <h4>ID</h4>
+                    <p>123</p>
+                </div>
+                <div class="col-sm-4 wthree-top-grid">
+                    <h4>介绍</h4>
+                    <p>xxxxx</p>
+                </div>
+                <div class="col-sm-4 wthree-top-grid">
+                    <h4>研究领域</h4>
+                    <p>xxxxx</p>
+                </div>
+                <div class="col-sm-4 wthree-top-grid">
+                    <h4>论文成果</h4>
+                    <p>xxxxx</p>
+                </div>
+                <div class="col-sm-4 wthree-top-grid">
+                    <h4>专利成果</h4>
+                    <p>xxxxx</p>
+                </div>
+                <div class="clearfix"> </div>
+            </div>
+        </div>
+    </div>
+    <!-- //about-top -->
+
+    <!-- choose -->
+    <div class="jarallax w3-agileits-choose-grid">
+        <div class="container">
+            <div class="w3-banner-bottom-heading about-choose">
+                <h3>Why choose  <span>us?</span></h3>
+            </div>
+            <div class="agile-choose-grids">
+                <div class="col-sm-4 agile-choose-grid">
+                    <div class="choose-icon">
+                        <i class="fa fa-user" aria-hidden="true"></i>
+                    </div>
+                    <div class="choose-info">
+                        <h4>Suspendisse ornare vitae ex nec aliquam</h4>
+                        <p>Nunc et massa ut purus porta euismod quis eu erat. Nam ornare faucibus elit sed tempor. Quisque iaculis odio nibh, et auctor tellus rhoncus vel. Maecenas arcu neque, semper eu commodo ut, pharetra vitae erat.</p>
+                    </div>
+                </div>
+                <div class="col-sm-4 agile-choose-grid">
+                    <div class="choose-icon">
+                        <i class="fa fa-cogs" aria-hidden="true"></i>
+                    </div>
+                    <div class="choose-info">
+                        <h4>Suspendisse ornare vitae ex nec aliquam</h4>
+                        <p>Nunc et massa ut purus porta euismod quis eu erat. Nam ornare faucibus elit sed tempor. Quisque iaculis odio nibh, et auctor tellus rhoncus vel. Maecenas arcu neque, semper eu commodo ut, pharetra vitae erat.</p>
+                    </div>
+                </div>
+                <div class="col-sm-4 agile-choose-grid">
+                    <div class="choose-icon">
+                        <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
+                    </div>
+                    <div class="choose-info">
+                        <h4>Suspendisse ornare vitae ex nec aliquam</h4>
+                        <p>Nunc et massa ut purus porta euismod quis eu erat. Nam ornare faucibus elit sed tempor. Quisque iaculis odio nibh, et auctor tellus rhoncus vel. Maecenas arcu neque, semper eu commodo ut, pharetra vitae erat.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- //choose -->
+
+    <!-- team -->
+    <div class="team">
+        <div class="container">
+            <div class="w3-banner-bottom-heading">
+                <h3>Our <span>Team</span></h3>
+            </div>
+            <div class="team-grids">
+                <!-- Bottom to top-->
+                <div class="col-sm-4 team-grid">
+                    <!-- normal -->
+                    <div class="ih-item circle effect10 bottom_to_top">
+                        <div class="img"><img src="images/t1.jpg" alt="img" /></div>
+                        <div class="info">
+                            <h3>David Watson</h3>
+                            <div class="icons">
+                                <ul>
+                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end normal -->
+                </div>
+                <div class="col-sm-4 team-grid">
+                    <!-- normal -->
+                    <div class="ih-item circle effect10 bottom_to_top">
+                        <div class="img"><img src="images/t2.jpg" alt="img" /></div>
+                        <div class="info">
+                            <h3>Shane Smith</h3>
+                            <div class="icons">
+                                <ul>
+                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end normal -->
+                </div>
+                <div class="col-sm-4 team-grid">
+                    <!-- normal -->
+                    <div class="ih-item circle effect10 bottom_to_top">
+                        <div class="img"><img src="images/t3.jpg" alt="img" /></div>
+                        <div class="info">
+                            <h3>Steve Warner</h3>
+                            <div class="icons">
+                                <ul>
+                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end normal -->
+                </div>
+                <div class="col-sm-4 team-grid">
+                    <!-- normal -->
+                    <div class="ih-item circle effect10 bottom_to_top">
+                        <div class="img"><img src="images/t4.jpg" alt="img" /></div>
+                        <div class="info">
+                            <h3>Dale Duminy</h3>
+                            <div class="icons">
+                                <ul>
+                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end normal -->
+                </div>
+                <div class="col-sm-4 team-grid">
+                    <!-- normal -->
+                    <div class="ih-item circle effect10 bottom_to_top">
+                        <div class="img"><img src="images/t5.jpg" alt="img" /></div>
+                        <div class="info">
+                            <h3>Shane Miller</h3>
+                            <div class="icons">
+                                <ul>
+                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end normal -->
+                </div>
+                <div class="col-sm-4 team-grid">
+                    <!-- normal -->
+                    <div class="ih-item circle effect10 bottom_to_top">
+                        <div class="img"><img src="images/t6.jpg" alt="img" /></div>
+                        <div class="info">
+                            <h3>James Kallis</h3>
+                            <div class="icons">
+                                <ul>
+                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end normal -->
+                </div>
+                <div class="clearfix"> </div>
+                <!-- end Bottom to top-->
+            </div>
+        </div>
+    </div>
+    <!-- //team -->
+</div>
+<!-- //about -->
+<!-- footer -->
+<div class="footer">
+    <div class="container">
+        <div class="agile-footer-grids">
+            <div class="col-md-4 agile-footer-grid">
+                <h4>History of <span>Hosting</span></h4>
+                <p>Pellentesque urna ex, ultricies a nunc at, pretium maximus nisi. Vestibulum non auctor diam. Mauris eget consectetur mauris. <span>Aenean leo elit, accumsan vel elit vitae, mattis ultricies lacus. Cras consectetur justo lorem, sed dictum sapien eleifend at.</span></p>
+            </div>
+            <div class="col-md-4 agile-footer-grid">
+                <h4>Twitter <span>Posts</span></h4>
+                <ul class="w3agile_footer_grid_list">
+                    <li>Ut aut reiciendis voluptatibus maiores <a href="#">http://example.com</a> alias, ut aut reiciendis.
+                        <span><i class="fa fa-twitter" aria-hidden="true"></i> 02 days ago</span></li>
+                    <li>Itaque earum rerum hic tenetur a sapiente delectus <a href="#">http://example.com</a> ut aut
+                        voluptatibus.<span><i class="fa fa-twitter" aria-hidden="true"></i> 03 days ago</span></li>
+                </ul>
+            </div>
+            <div class="col-md-4 agile-footer-grid">
+                <h4>Popular <span>Posts</span></h4>
+                <div class="popular-grids">
+                    <div class="popular-grid">
+                        <a href="#"><img src="images/6.jpg" alt=""></a>
+                    </div>
+                    <div class="popular-grid">
+                        <a href="#"><img src="images/7.jpg" alt=""></a>
+                    </div>
+                    <div class="popular-grid">
+                        <a href="#"><img src="images/8.jpg" alt=""></a>
+                    </div>
+                    <div class="popular-grid">
+                        <a href="#"><img src="images/9.jpg" alt=""></a>
+                    </div>
+                    <div class="clearfix"> </div>
+                </div>
+                <div class="popular-grids agileits-小贝壳网站模板-popular">
+                    <div class="popular-grid">
+                        <a href="#"><img src="images/10.jpg" alt=""></a>
+                    </div>
+                    <div class="popular-grid">
+                        <a href="#"><img src="images/4.jpg" alt=""></a>
+                    </div>
+                    <div class="popular-grid">
+                        <a href="#"><img src="images/6.jpg" alt=""></a>
+                    </div>
+                    <div class="popular-grid">
+                        <a href="#"><img src="images/7.jpg" alt=""></a>
+                    </div>
+                    <div class="clearfix"> </div>
+                </div>
+                <div class="popular-grids">
+                    <div class="popular-grid">
+                        <a href="#"><img src="images/8.jpg" alt=""></a>
+                    </div>
+                    <div class="popular-grid">
+                        <a href="#"><img src="images/9.jpg" alt=""></a>
+                    </div>
+                    <div class="popular-grid">
+                        <a href="#"><img src="images/10.jpg" alt=""></a>
+                    </div>
+                    <div class="popular-grid">
+                        <a href="#"><img src="images/4.jpg" alt=""></a>
+                    </div>
+                    <div class="clearfix"> </div>
+                </div>
+            </div>
+            <div class="clearfix"> </div>
+        </div>
+    </div>
+    <div class="copyright">
+        <p>© 2016 Hosting City. All rights reserved | Design by <a href="http://www.smallseashell.com">.小贝壳网站模板.</a></p>
+    </div>
+</div>
+<!-- //footer -->
 <script src="js/jarallax.js"></script>
 <script type="text/javascript">
     /* init Jarallax */
