--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<div id="immersive_slider">
 				  <div class="slide" data-blurred="">
 						<div class="col-md-6 image">
-							<img src="images/universeBomb.jpg" alt="Slider 1" />
+							<img src="images/page1.jpg" alt="Slider 1" />
 						</div>
 						<div class="col-md-6 content">
 							<h3>宇宙大爆炸与<span>奇点理论</span></h3>
@@ -121,7 +121,7 @@
 				  </div>
 				  <div class="slide" data-blurred="">
 						<div class="col-md-6 image">
-							<img src="images/cnn.jpg" alt="Slider 1" />
+							<img src="images/page2.jpg" alt="Slider 1" />
 						</div>
 						<div class="col-md-6 content">
 							<h3>基于<span>卷积神经网络</span>的手势识别初探</h3>
@@ -131,7 +131,7 @@
 				  </div>
 				  <div class="slide" data-blurred="">
 						<div class="col-md-6 image">
-							<img src="images/rna.jpg" alt="Slider 1" />
+							<img src="images/page3.jpg" alt="Slider 1" />
 						</div>
 						<div class="col-md-6 content">
 							<h3><span>长链非编码RNA</span>的研究策略</h3>
