加了一点内容

--- a/professor.html
+++ b/professor.html
@@ -25,6 +25,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script src="js/bootstrap.js"></script>
     <script src="js/SmoothScroll.min.js"></script>
     <script src="js/checkIfLogin.js"></script>
+    <script src="js/professorInformation.js"></script>
     <script type="text/javascript">
         jQuery(document).ready(function($) {
             $(".scroll").click(function(event){
@@ -114,33 +115,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="w3-banner-bottom-heading">
                 <h3>基本<span>信息</span></h3>
             </div>
-            <div class="agileinfo-top-grids">
-                <div class="col-sm-4 wthree-top-grid">
-                    <h4>姓名</h4>
-                    <p>xxxxx</p>
-                </div>
-                <div class="col-sm-4 wthree-top-grid">
-                    <h4>ID</h4>
-                    <p>123</p>
-                </div>
-                <div class="col-sm-4 wthree-top-grid">
-                    <h4>介绍</h4>
-                    <p>xxxxx</p>
-                </div>
-                <div class="col-sm-4 wthree-top-grid">
-                    <h4>研究领域</h4>
-                    <p>xxxxx</p>
-                </div>
-                <div class="col-sm-4 wthree-top-grid">
-                    <h4>论文成果</h4>
-                    <p>xxxxx</p>
-                </div>
-                <div class="col-sm-4 wthree-top-grid">
-                    <h4>专利成果</h4>
-                    <p>xxxxx</p>
-                </div>
-                <div class="clearfix"> </div>
-            </div>
         </div>
     </div>
     <!-- //about-top -->
@@ -149,7 +123,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="jarallax w3-agileits-choose-grid">
         <div class="container">
             <div class="w3-banner-bottom-heading about-choose">
-                <h3>Why choose  <span>us?</span></h3>
+                <h3 id="professorName">专家姓名  </h3>
+                <h3 id="professprID"><span>                                ID:123456</span></h3>
             </div>
             <div class="agile-choose-grids">
                 <div class="col-sm-4 agile-choose-grid">
@@ -157,8 +132,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <i class="fa fa-user" aria-hidden="true"></i>
                     </div>
                     <div class="choose-info">
-                        <h4>Suspendisse ornare vitae ex nec aliquam</h4>
-                        <p>Nunc et massa ut purus porta euismod quis eu erat. Nam ornare faucibus elit sed tempor. Quisque iaculis odio nibh, et auctor tellus rhoncus vel. Maecenas arcu neque, semper eu commodo ut, pharetra vitae erat.</p>
+                        <h4 id="introduction">介绍</h4>
+                        <p>被引频次 32815 成果数 615 H指数 77 G指数 178</p>
                     </div>
                 </div>
                 <div class="col-sm-4 agile-choose-grid">
@@ -166,8 +141,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <i class="fa fa-cogs" aria-hidden="true"></i>
                     </div>
                     <div class="choose-info">
-                        <h4>Suspendisse ornare vitae ex nec aliquam</h4>
-                        <p>Nunc et massa ut purus porta euismod quis eu erat. Nam ornare faucibus elit sed tempor. Quisque iaculis odio nibh, et auctor tellus rhoncus vel. Maecenas arcu neque, semper eu commodo ut, pharetra vitae erat.</p>
+                        <h4 id="institution">组织机构</h4>
+                        <p>北京大学中国经济研究中心</p>
                     </div>
                 </div>
                 <div class="col-sm-4 agile-choose-grid">
@@ -175,8 +150,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
                     </div>
                     <div class="choose-info">
-                        <h4>Suspendisse ornare vitae ex nec aliquam</h4>
-                        <p>Nunc et massa ut purus porta euismod quis eu erat. Nam ornare faucibus elit sed tempor. Quisque iaculis odio nibh, et auctor tellus rhoncus vel. Maecenas arcu neque, semper eu commodo ut, pharetra vitae erat.</p>
+                        <h4 id="researchField">科研领域</h4>
+                        <p>发展经济学</p>
                     </div>
                 </div>
             </div>
@@ -184,11 +159,27 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
     <!-- //choose -->
 
+    <!--paper-->
+    <div class="paper">
+        <div class="container">
+            <div class="w3-banner-bottom-heading">
+                <h3>论文<span>成果</span></h3>
+            </div>
+            <div class="team-grids">
+                <p class="paperName"> "固守“西天取经”得来的教条危害甚巨",</p>
+                <p> "新结构经济学、自生能力与新的理论见解",</p>
+                <p>"一带一路与自贸区:中国新的对外开放倡议与举措",</p>
+                <p>"供给侧改革彰显我国制度优越性",</p>
+                <p>"把投资需求与补短板相结合"</p>
+            </div>
+        </div>
+    </div>
+
     <!-- team -->
     <div class="team">
         <div class="container">
             <div class="w3-banner-bottom-heading">
-                <h3>Our <span>Team</span></h3>
+                <h3>相关<span>功能</span></h3>
             </div>
             <div class="team-grids">
                 <!-- Bottom to top-->
@@ -197,14 +188,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <div class="ih-item circle effect10 bottom_to_top">
                         <div class="img"><img src="images/t1.jpg" alt="img" /></div>
                         <div class="info">
-                            <h3>David Watson</h3>
-                            <div class="icons">
-                                <ul>
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
+                            <h3>修改专家信息</h3>
+                            <!--<div class="icons">-->
+                                <!--<ul>-->
+                                    <!--<li><a href="#"><i class="fa fa-facebook"></i></a></li>-->
+                                    <!--<li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>-->
+                                    <!--<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>-->
+                                <!--</ul>-->
+                            <!--</div>-->
                         </div>
                     </div>
                     <!-- end normal -->
@@ -214,14 +205,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <div class="ih-item circle effect10 bottom_to_top">
                         <div class="img"><img src="images/t2.jpg" alt="img" /></div>
                         <div class="info">
-                            <h3>Shane Smith</h3>
-                            <div class="icons">
-                                <ul>
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
+                            <h3>门户信息申诉</h3>
                         </div>
                     </div>
                     <!-- end normal -->
@@ -231,65 +215,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <div class="ih-item circle effect10 bottom_to_top">
                         <div class="img"><img src="images/t3.jpg" alt="img" /></div>
                         <div class="info">
-                            <h3>Steve Warner</h3>
-                            <div class="icons">
-                                <ul>
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- end normal -->
-                </div>
-                <div class="col-sm-4 team-grid">
-                    <!-- normal -->
-                    <div class="ih-item circle effect10 bottom_to_top">
-                        <div class="img"><img src="images/t4.jpg" alt="img" /></div>
-                        <div class="info">
-                            <h3>Dale Duminy</h3>
-                            <div class="icons">
-                                <ul>
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- end normal -->
-                </div>
-                <div class="col-sm-4 team-grid">
-                    <!-- normal -->
-                    <div class="ih-item circle effect10 bottom_to_top">
-                        <div class="img"><img src="images/t5.jpg" alt="img" /></div>
-                        <div class="info">
-                            <h3>Shane Miller</h3>
-                            <div class="icons">
-                                <ul>
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- end normal -->
-                </div>
-                <div class="col-sm-4 team-grid">
-                    <!-- normal -->
-                    <div class="ih-item circle effect10 bottom_to_top">
-                        <div class="img"><img src="images/t6.jpg" alt="img" /></div>
-                        <div class="info">
-                            <h3>James Kallis</h3>
-                            <div class="icons">
-                                <ul>
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
+                            <h3>修改资源购买积分</h3>
                         </div>
                     </div>
                     <!-- end normal -->
