--- a/results.html
+++ b/results.html
@@ -25,7 +25,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/SmoothScroll.min.js"></script>
-    <script src="js/checkIfLogin.js"></script>
+    <!--<script src="js/checkIfLogin.js"></script>-->
     <script src="js/results.js"></script>
     <script type="text/javascript">
         jQuery(document).ready(function($) {
@@ -136,72 +136,24 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 <!-- //about-heading -->
 <!-- blog -->
-<div class="blog bolg_results">
+<div class="blog blog_results">
     <div class="container">
         <div class="agile-blog-grids">
-            <div class="col-md-8 agile-blog-grid-left">
+            <div class="col-md-8 agile-blog-grid-left" id="resultsContainer">
                 <div class="classification">
                     排序：
                     <select class="sort_select">
-                        <option value ="relavance" selected="selected">按相关性</option>
+                        <option value ="correlation" selected="selected">按相关性</option>
                         <option value ="cite_num">按被引量</option>
                         <option value="publish_time">按时间降序</option>
                     </select>
                 </div>
                 <div class="agile-blog-grid">
-                    <!--<div class="agile-blog-grid-left-img">-->
-                        <!--<a href="resultpage.html"><img src="images/3a.jpg" alt="" /></a>-->
-                    <!--</div>-->
                     <div class="blog-left-grids">
-                        <!--<div class="blog-left-left">-->
-                            <!--<i class="fa fa-pencil" aria-hidden="true"></i>-->
-                        <!--</div>-->
                         <div class="blog-left-right_results">
                             <div class="blog-left-right-top">
                                 <h4><a href="resultpage.html">Integer et turpis augue. In hac habitasse platea dictumst.</a><img src="images/point.png"><span class="point_icon_font">20</span></h4>
                                 <p><a href="#">Author1</a>，<a href="#">Author2</a> &nbsp;-&nbsp; 2016 &nbsp;-&nbsp; 《自动化学报》&nbsp;-&nbsp; 被引量：130</p>
-                            </div>
-                            <div class="blog-left-right-bottom">
-                                <p>Vivamus fermentum vel lacus ac ornare. Vestibulum pulvinar massa pharetra risus pharetra, eu blandit risus viverra. Aenean in ultrices enim, ut tincidunt libero. Phasellus libero enim, semper ac felis eget, efficitur ultrices orci. Aenean tincidunt lacus lorem, non varius enim luctus sed. Quisque eu aliquet quam, et sollicitudin nibh. Duis finibus at felis eu laoreet. Nulla non lacus sem.</p>
-                                <!--<a href="resultpage.html">More</a>-->
-                            </div>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
-                </div>
-                <div class="agile-blog-grid">
-                    <!--<div class="agile-blog-grid-left-img">-->
-                    <!--<a href="resultpage.html"><img src="images/3a.jpg" alt="" /></a>-->
-                    <!--</div>-->
-                    <div class="blog-left-grids">
-                        <!--<div class="blog-left-left">-->
-                        <!--<i class="fa fa-pencil" aria-hidden="true"></i>-->
-                        <!--</div>-->
-                        <div class="blog-left-right_results">
-                            <div class="blog-left-right-top">
-                                <h4><a href="resultpage.html">Integer et turpis augue. In hac habitasse platea dictumst.</a></h4>
-                                <p>Posted By <a href="#">Admin</a> &nbsp;&nbsp; on June 2, 2016 &nbsp;&nbsp; <a href="#">Comments (10)</a></p>
-                            </div>
-                            <div class="blog-left-right-bottom">
-                                <p>Vivamus fermentum vel lacus ac ornare. Vestibulum pulvinar massa pharetra risus pharetra, eu blandit risus viverra. Aenean in ultrices enim, ut tincidunt libero. Phasellus libero enim, semper ac felis eget, efficitur ultrices orci. Aenean tincidunt lacus lorem, non varius enim luctus sed. Quisque eu aliquet quam, et sollicitudin nibh. Duis finibus at felis eu laoreet. Nulla non lacus sem.</p>
-                                <!--<a href="resultpage.html">More</a>-->
-                            </div>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
-                </div>
-                <div class="agile-blog-grid">
-                    <!--<div class="agile-blog-grid-left-img">-->
-                    <!--<a href="resultpage.html"><img src="images/3a.jpg" alt="" /></a>-->
-                    <!--</div>-->
-                    <div class="blog-left-grids">
-                        <!--<div class="blog-left-left">-->
-                        <!--<i class="fa fa-pencil" aria-hidden="true"></i>-->
-                        <!--</div>-->
-                        <div class="blog-left-right_results">
-                            <div class="blog-left-right-top">
-                                <h4><a href="resultpage.html">Integer et turpis augue. In hac habitasse platea dictumst.</a></h4>
-                                <p>Posted By <a href="#">Admin</a> &nbsp;&nbsp; on June 2, 2016 &nbsp;&nbsp; <a href="#">Comments (10)</a></p>
                             </div>
                             <div class="blog-left-right-bottom">
                                 <p>Vivamus fermentum vel lacus ac ornare. Vestibulum pulvinar massa pharetra risus pharetra, eu blandit risus viverra. Aenean in ultrices enim, ut tincidunt libero. Phasellus libero enim, semper ac felis eget, efficitur ultrices orci. Aenean tincidunt lacus lorem, non varius enim luctus sed. Quisque eu aliquet quam, et sollicitudin nibh. Duis finibus at felis eu laoreet. Nulla non lacus sem.</p>
